--- a/aed/Makefile
+++ b/aed/Makefile
@@ -12,3 +12,7 @@ run:
 
 clear:
 	rm bin/Main.class
+
+git:
+	git config --global user.email "gustavobertuzziif@gmail.com"
+	git config --global user.name "Gustavo Bertuzzi"
