--- a/aed/Makefile
+++ b/aed/Makefile
@@ -2,7 +2,7 @@ all: build run
 
 build:
 	javac -d bin Main.java
-	javac -d bin aulas/aula20.java
+	javac -d bin aulas/aula*.java
 	javac -d bin libs/Entrada.java
 	javac -d bin libs/matematica.java
 
